@@ -7,6 +7,9 @@
 #include "osxgui.hpp"
 // ---------------------------------------------------------------------------
 #include "R.h"
+#ifndef DEBUG
+#define NDEBUG
+#endif
 #include <cassert>
 // ---------------------------------------------------------------------------
 namespace lib {
